2025-06-01T01:45:56Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/15369664750 # 661
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-06-01
* notice: last 14d: unq all: 1 5
* notice: prev accum: outdated-unq outdated-all / unq all: 1006 1486 / 1012 1492
* notice: next accum: outdated-unq outdated-all / unq all: 1007 1487 / 1012 1492
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-05-18] / []

2025-05-30T01:20:36Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/15337039953 # 659
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-05-30
* notice: last 14d: unq all: 1 6
* notice: prev accum: outdated-unq outdated-all / unq all: 1003 1483 / 1012 1492
* notice: next accum: outdated-unq outdated-all / unq all: 1006 1486 / 1012 1492
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-05-15 2025-05-16] / []

2025-05-29T01:22:41Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/15314088024 # 658
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-05-29
* notice: last 14d: unq all: 2 8
* notice: prev accum: outdated-unq outdated-all / unq all: 1001 1481 / 1012 1492
* notice: next accum: outdated-unq outdated-all / unq all: 1003 1483 / 1012 1492
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -1 -1 / +2 +2 -1 -1 / 1 1
* notice: removed / changed dates: [2025-05-14] / [2025-05-15]

2025-05-27T01:21:21Z: