@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-06-01T01:45:56Z",
-  "count_outdated" : 1487,
-  "uniques_outdated" : 1007,
+  "timestamp" : "2025-06-02T01:26:11Z",
+  "count_outdated" : 1488,
+  "uniques_outdated" : 1008,
   "count" : 1492,
   "uniques" : 1012,
   "clones" : [
-    {
-      "timestamp": "2025-05-19T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-05-21T00:00:00Z",
       "count": 1,
