@@ -1,12 +1,7 @@
 {
-  "count": 5,
+  "count": 4,
   "uniques": 1,
   "clones": [
-    {
-      "timestamp": "2025-05-19T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2025-05-21T00:00:00Z",
       "count": 1,
