@@ -1,3 +1,12 @@
+2025-06-02T01:26:11Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/15381772126 # 662
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-06-02
+* notice: last 14d: unq all: 1 4
+* notice: prev accum: outdated-unq outdated-all / unq all: 1007 1487 / 1012 1492
+* notice: next accum: outdated-unq outdated-all / unq all: 1008 1488 / 1012 1492
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2025-05-19] / []
+
 2025-06-01T01:45:56Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/15369664750 # 661
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-06-01
